--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #f1f5f8;
+    color: #222;
+}
+
+h4 {
+    color: red;
+}
+
+.Booklist {
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    gap: 3rem;
+}
+
+@media screen and(min-width: 1068px) {
+    .Booklist {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+.Book {
+    background: yellow;
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+
+}
+
+.Book h2 {
+    margin-top: 0.5rem;
 }
